NVDA: Fixes bug whereby focus was not returning to the webview after dismissing a context menu

TBR=dmazzoni@chromium.org, aleventhal@chromium.org
CC=dsexton@google.com

Change-Id: Ib9728eda30599e51b3b494f7781a2240ccdbd023
Bug: 912944
Reviewed-on: https://chromium-review.googlesource.com/c/1368666
Commit-Queue: Nektarios Paisios <nektar@chromium.org>
Reviewed-by: Nektarios Paisios <nektar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#614855}
Former-commit-id: a1846d7fdad4cb66f604d261006803208e76b26a